--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -87,3 +87,66 @@ function sort(array) {
 
 ![](/assets/sort6_1.png)
 
+### 插入排序
+插入排序的设计初衷是往有序的数组中快速插入一个新的元素. 它的算法思想是: 把要排序的数组分为了两个部分, 一部分是数组的全部元素(除去待插入的元素), 另一部分是待插入的元素; 先将第一部分排序完成, 然后再插入这个元素. 其中第一部分的排序也是通过再次拆分为两部分来进行的.
+
+插入排序由于操作不尽相同, 可分为 直接插入排序 , 折半插入排序(又称二分插入排序), 链表插入排序 , 希尔排序 .
+
+### 4、直接插入排序
+它的基本思想是: 将待排序的元素按照大小顺序, 依次插入到一个已经排好序的数组之中, 直到所有的元素都插入进去.
+由于直接插入排序每次只移动一个元素的位置, 并不会改变值相同的元素之间的排序, 因此它是一种稳定排序.
+```js
+/** 4、直接插入排序 **/
+function sort(array) {
+    for (let i = 1, len = array.length; i < len; i++) { //直接从第二个开始比较
+        let current = array[i];  //将这次要比较的值存储起来，作为这一轮循环里面的常量
+        let index = i;
+        for (let j = i - 1; j >= 0; j--) {  //从index前一位数开始比较
+            if (current < array[j]) {
+                array[index] = array[index - 1];  //如果当前比较的数小于它的前一位，则将大的数后移一位
+                index--;    //于此同时，下标也前移一位，继续下一次比较
+            }
+        }
+        if (index !== i) {  //防止自己赋值给自己，
+            array[index] = current //如果不是自己，则一定是之前后移空出来留给current的位置，插入进去
+        }
+    }
+    return array;
+}
+```
+![](/assets/sort07.gif)
+
+### 5、折半插入排序
+折半插入排序是直接插入排序的升级版. 鉴于插入排序第一部分为已排好序的数组, 我们不必按顺序依次寻找插入点, 只需比较它们的中间值与待插入元素的大小即可.
+说白一点就是从第二个数开始向前比较，前面的数（已经排好序）分成两半，找到中间的数，比较大小，然后在向中间循环，一直找到介于两者之间的，然后把之后的后移，将此值插入到后移留出来的位置。
+和直接插入法相比，少了一半的对比。
+
+
+```js
+/** 5、折半插入排序 **/
+function sort(array) {
+    for (let i = 1, len = array.length; i < len; i++) { //直接从第二个开始比较 i=1
+        let low = 0, high = i - 1, current = array[i];
+        //找中值对应的下标
+        while (low <= high) {
+//                let m = Math.floor((low+high) / 2);
+            let m = (low + high) >> 1;   //x>>1 是位运算中的右移运算, 表示右移一位, 等同于x除以2再取整, 即 x>>1 == Math.floor(x/2) .
+            if (array[i] <= array[m]) {
+                high = m - 1   //保证low<=high顺利成立，将high定位低半区
+            } else {
+                low = m + 1     //同理
+            }
+        }
+
+        //将在要插入值位置之后的所有元素后移，留出插入的位置
+        for (let j = i; j > low; j--) {
+            array[j] = array[j - 1];
+            console.log(array)
+        }
+        array[low] = current  //插入
+
+    }
+    return array;
+}
+```
+
