--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -119,7 +119,7 @@ function sort(array) {
 ### 5、折半插入排序
 折半插入排序是直接插入排序的升级版. 鉴于插入排序第一部分为已排好序的数组, 我们不必按顺序依次寻找插入点, 只需比较它们的中间值与待插入元素的大小即可.
 说白一点就是从第二个数开始向前比较，前面的数（已经排好序）分成两半，找到中间的数，比较大小，然后在向中间循环，一直找到介于两者之间的，然后把之后的后移，将此值插入到后移留出来的位置。
-和直接插入法相比，少了一半的对比。
+和直接插入法相比，少了一半数据量的对比。
 
 
 ```js
