--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -118,9 +118,17 @@ function sort(array) {
 
 ### 5、折半插入排序
 折半插入排序是直接插入排序的升级版. 鉴于插入排序第一部分为已排好序的数组, 我们不必按顺序依次寻找插入点, 只需比较它们的中间值与待插入元素的大小即可.
+
 说白一点就是从第二个数开始向前比较，前面的数（已经排好序）分成两半，找到中间的数，比较大小，然后在向中间循环，一直找到介于两者之间的，然后把之后的后移，将此值插入到后移留出来的位置。
+
 和直接插入法相比，少了一半数据量的对比。
 
+算法基本思想是:
+
+1. 取0 ~ i-1的中间点( m = (i-1)>>1 ), array[i] 与 array[m] 进行比较, 若array[i] < array[m] , 则说明待插入的元素array[i] 应该处于数组的 0 ~ m 索引之间; 反之, 则说明它应该处于数组的 m ~ i-1 索引之间.
+2. 重复步骤1, 每次缩小一半的查找范围, 直至找到插入的位置.
+3. 将数组中插入位置之后的元素全部后移一位.
+4. 在指定位置插入第 i 个元素.
 
 ```js
 /** 5、折半插入排序 **/
@@ -150,6 +158,13 @@ function sort(array) {
 }
 ```
 
-### 6、
+### 6、希尔排序
+希尔排序也称缩小增量排序, 它是直接插入排序的另外一个升级版, 实质就是分组插入排序. 希尔排序以其设计者希尔(Donald Shell)的名字命名, 并于1959年公布.
 
+算法的基本思想:
+
+1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将[0,1,2,3,4,5,6,7,8,9,10]的数组拆分为”增量”为5的分组, 那么子分组分别为 [0,5], [1,6], [2,7], [3,8], [4,9] 和 [5,10].
+2. 然后对每个子分组应用直接插入排序.
+3. 逐步减小”增量”, 重复步骤1,2.
+4. 直至”增量”为1, 这是最后一个排序, 此时的排序, 也就是对全数组进行直接插入排序.
 
