--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -101,11 +101,11 @@ function sort(array) {
     for (let i = 1, len = array.length; i < len; i++) { //直接从第二个开始比较
         let current = array[i];  //将这次要比较的值存储起来，作为这一轮循环里面的常量
         let index = i;
-        for (let j = i - 1; j >= 0; j--) {  //从index前一位数开始比较
-            if (current < array[j]) {
-                array[index] = array[index - 1];  //如果当前比较的数小于它的前一位，则将大的数后移一位
-                index--;    //于此同时，下标也前移一位，继续下一次比较
-            }
+
+        //从index前一位数开始比较比较，如果当前比较的数小于它的前一位，则将大的数后移一位
+        while (current < array[index - 1] && index >= 0) {
+            array[index] = array[index - 1];
+            index--;  //于此同时，下标也前移一位，继续下一次比较
         }
         if (index !== i) {  //防止自己赋值给自己，
             array[index] = current //如果不是自己，则一定是之前后移空出来留给current的位置，插入进去
@@ -167,4 +167,46 @@ function sort(array) {
 2. 然后对每个子分组应用直接插入排序.
 3. 逐步减小”增量”, 重复步骤1,2.
 4. 直至”增量”为1, 这是最后一个排序, 此时的排序, 也就是对全数组进行直接插入排序.
+
+示意图：
+![](/assets/sort04.png)
+
+可见, 希尔排序实际上就是不断的进行直接插入排序, 分组是为了先将局部元素有序化. 因为直接插入排序在元素基本有序的状态下, 效率非常高. 而希尔排序呢, 通过先分组后排序的方式, 制造了直接插入排序高效运行的场景. 因此希尔排序效率更高.
+
+
+```js
+/** 6、希尔排序 **/
+//封装直接插入排序
+function dirSort(array, grap) {
+    grap = arguments[1] ? grap : 1;  //如果grap传值了，则为grap传入的值，如果没有，则从1开始
+//        debugger;
+    for (let i = grap - 1, len = array.length; i < len; i++) { //直接从第grap-1个开始比较
+        let current = array[i];  //将这次要比较的值存储起来，作为这一轮循环里面的常量
+        let index = i;
+
+        //只比较分组内的最大步长间距的两个数，循环一次就跳出来
+        while (current < array[index - grap] && index >= 0) {
+            array[index] = array[index - grap];  //如果当前比较的数小于它的前一位，则将大的数后移一位
+            index -= grap;    //于此同时，下标也前移grap，继续下一次比较
+        }
+
+
+        if (index !== i) {  //防止自己赋值给自己，
+            array[index] = current; //如果不是自己，则一定是之前后移空出来留给current的位置，插入进去
+            console.log(array)
+//                debugger
+        }
+    }
+    return array;
+}
+
+function sort(array) {
+    let gra = array.length >> 1;
+    while (gra > 0) {
+        dirSort(array, gra);
+        gra = gra >> 1;
+    }
+    return array
+}
+```
 
