--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -210,3 +210,36 @@ function sort(array) {
 }
 ```
 
+### 7、快速排序
+快速排序"的思想很简单，整个排序过程只需要三步：
+（1）在数据集之中，选择一个元素作为"基准"（pivot）。
+（2）所有小于"基准"的元素，都移到"基准"的左边；所有大于"基准"的元素，都移到"基准"的右边。
+（3）对"基准"左边和右边的两个子集，不断重复第一步和第二步，直到所有子集只剩下一个元素为止。
+![](/assets/sort09.gif)
+
+```js
+/** 7、快速排序 **/
+function sort(array) {
+    if (array.length >= 1) {
+        //选取基准点，基准点选取的好坏决定了排序速度的好坏，目前没有好的方法，一般居中选取
+        let baseIndex = array.length >> 1;
+        let left = [], right = [];  //定义基准点左右两边数组，小的都在左边，大的都在右边
+        // 循环判断
+        for (let i = 0; i < array.length; i++) {
+            if (i !== baseIndex) {       //这一步很关键，一定不能把自身算进去
+                if (array[i] < array[baseIndex]) {
+                    left.push(array[i])
+                } else
+                    right.push(array[i])
+            }
+        }
+//          最关键的一步：递归调用然后在用数组拼接
+        return arguments.callee(left).concat(array[baseIndex], arguments.callee(right))
+    }
+    else
+        return array;
+}
+```
+
+
+
