Creates assets/sort08.gif
Auto commit by GitBook Editor

--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -88,13 +88,16 @@ function sort(array) {
 ![](/assets/sort6_1.png)
 
 ### 插入排序
-插入排序的设计初衷是往有序的数组中快速插入一个新的元素. 它的算法思想是: 把要排序的数组分为了两个部分, 一部分是数组的全部元素(除去待插入的元素), 另一部分是待插入的元素; 先将第一部分排序完成, 然后再插入这个元素. 其中第一部分的排序也是通过再次拆分为两部分来进行的.
 
-插入排序由于操作不尽相同, 可分为 直接插入排序 , 折半插入排序(又称二分插入排序), 链表插入排序 , 希尔排序 .
+插入排序的设计初衷是往有序的数组中快速插入一个新的元素. 它的算法思想是: 把要排序的数组分为了两个部分, 一部分是数组的全部元素\(除去待插入的元素\), 另一部分是待插入的元素; 先将第一部分排序完成, 然后再插入这个元素. 其中第一部分的排序也是通过再次拆分为两部分来进行的.
+
+插入排序由于操作不尽相同, 可分为 直接插入排序 , 折半插入排序\(又称二分插入排序\), 链表插入排序 , 希尔排序 .
 
 ### 4、直接插入排序
-它的基本思想是: 将待排序的元素按照大小顺序, 依次插入到一个已经排好序的数组之中, 直到所有的元素都插入进去.
+
+它的基本思想是: 将待排序的元素按照大小顺序, 依次插入到一个已经排好序的数组之中, 直到所有的元素都插入进去.  
 由于直接插入排序每次只移动一个元素的位置, 并不会改变值相同的元素之间的排序, 因此它是一种稳定排序.
+
 ```js
 /** 4、直接插入排序 **/
 function sort(array) {
@@ -114,9 +117,11 @@ function sort(array) {
     return array;
 }
 ```
+
 ![](/assets/sort07.gif)
 
 ### 5、折半插入排序
+
 折半插入排序是直接插入排序的升级版. 鉴于插入排序第一部分为已排好序的数组, 我们不必按顺序依次寻找插入点, 只需比较它们的中间值与待插入元素的大小即可.
 
 说白一点就是从第二个数开始向前比较，前面的数（已经排好序）分成两半，找到中间的数，比较大小，然后在向中间循环，一直找到介于两者之间的，然后把之后的后移，将此值插入到后移留出来的位置。
@@ -125,7 +130,7 @@ function sort(array) {
 
 算法基本思想是:
 
-1. 取0 ~ i-1的中间点( m = (i-1)>>1 ), array[i] 与 array[m] 进行比较, 若array[i] < array[m] , 则说明待插入的元素array[i] 应该处于数组的 0 ~ m 索引之间; 反之, 则说明它应该处于数组的 m ~ i-1 索引之间.
+1. 取0 ~ i-1的中间点\( m = \(i-1\)&gt;&gt;1 \), array\[i\] 与 array\[m\] 进行比较, 若array\[i\] &lt; array\[m\] , 则说明待插入的元素array\[i\] 应该处于数组的 0 ~ m 索引之间; 反之, 则说明它应该处于数组的 m ~ i-1 索引之间.
 2. 重复步骤1, 每次缩小一半的查找范围, 直至找到插入的位置.
 3. 将数组中插入位置之后的元素全部后移一位.
 4. 在指定位置插入第 i 个元素.
@@ -159,20 +164,20 @@ function sort(array) {
 ```
 
 ### 6、希尔排序
-希尔排序也称缩小增量排序, 它是直接插入排序的另外一个升级版, 实质就是分组插入排序. 希尔排序以其设计者希尔(Donald Shell)的名字命名, 并于1959年公布.
+
+希尔排序也称缩小增量排序, 它是直接插入排序的另外一个升级版, 实质就是分组插入排序. 希尔排序以其设计者希尔\(Donald Shell\)的名字命名, 并于1959年公布.
 
 算法的基本思想:
 
-1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将[0,1,2,3,4,5,6,7,8,9,10]的数组拆分为”增量”为5的分组, 那么子分组分别为 [0,5], [1,6], [2,7], [3,8], [4,9] 和 [5,10].
+1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将\[0,1,2,3,4,5,6,7,8,9,10\]的数组拆分为”增量”为5的分组, 那么子分组分别为 \[0,5\], \[1,6\], \[2,7\], \[3,8\], \[4,9\] 和 \[5,10\].
 2. 然后对每个子分组应用直接插入排序.
 3. 逐步减小”增量”, 重复步骤1,2.
 4. 直至”增量”为1, 这是最后一个排序, 此时的排序, 也就是对全数组进行直接插入排序.
 
-示意图：
+示意图：  
 ![](/assets/sort04.png)
 
 可见, 希尔排序实际上就是不断的进行直接插入排序, 分组是为了先将局部元素有序化. 因为直接插入排序在元素基本有序的状态下, 效率非常高. 而希尔排序呢, 通过先分组后排序的方式, 制造了直接插入排序高效运行的场景. 因此希尔排序效率更高.
-
 
 ```js
 /** 6、希尔排序 **/
@@ -211,10 +216,13 @@ function sort(array) {
 ```
 
 ### 7、快速排序
-快速排序"的思想很简单，整个排序过程只需要三步：
-（1）在数据集之中，选择一个元素作为"基准"（pivot）。
-（2）所有小于"基准"的元素，都移到"基准"的左边；所有大于"基准"的元素，都移到"基准"的右边。
-（3）对"基准"左边和右边的两个子集，不断重复第一步和第二步，直到所有子集只剩下一个元素为止。
+
+这是一种使用非常广泛的排序，典型的代表就是Chrome的v8引擎为了高效排序, 在排序数据超过了10条时, 便会采用快速排序. 对于10条及以下的数据采用的便是插入排序
+
+快速排序"的思想很简单，整个排序过程只需要三步：  
+（1）在数据集之中，选择一个元素作为"基准"（pivot）。  
+（2）所有小于"基准"的元素，都移到"基准"的左边；所有大于"基准"的元素，都移到"基准"的右边。  
+（3）对"基准"左边和右边的两个子集，不断重复第一步和第二步，直到所有子集只剩下一个元素为止。  
 ![](/assets/sort09.gif)
 
 ```js
@@ -241,5 +249,44 @@ function sort(array) {
 }
 ```
 
+![](/assets/sort9_1.png)
 
+### 8、归并排序
+
+归并排序建立在归并操作之上, 它采取分而治之的思想, 将数组拆分为两个子数组, 分别排序, 最后才将两个子数组合并; 拆分的两个子数组, 再继续递归拆分为更小的子数组, 进而分别排序, 直到数组长度为1, 直接返回该数组为止.
+
+![](/assets/sort08.gif)
+
+
+
+```js
+/** 8、归并排序 **/
+function sort(array) {
+    if (array.length < 2)
+        return array;
+    else {
+        let res = [];
+        //上半部分拆分数组，
+        let baseIndex = array.length >> 1;
+        let left = array.slice(0, baseIndex),
+            right = array.slice(baseIndex);
+
+        //合并数组，
+        function merge(left, right) {
+            while (left.length && right.length) {
+                let item = left[0] <= right[0] ? left.shift() : right.shift();
+                res.push(item);
+            }
+            return res.concat(left.length ? left : right);  //返回排好数组
+        }
+
+        //递归调用，一边拆分，一边合并
+        return merge(arguments.callee(left), arguments.callee(right));
+    }
+}
+```
+
+
+
+![](/assets/sort8_1.png)
 
