Creates assets/sort12.png
Auto commit by GitBook Editor

--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -257,8 +257,6 @@ function sort(array) {
 
 ![](/assets/sort08.gif)
 
-
-
 ```js
 /** 8、归并排序 **/
 function sort(array) {
@@ -286,7 +284,30 @@ function sort(array) {
 }
 ```
 
-
-
 ![](/assets/sort8_1.png)
+
+### 9、堆排序
+
+### 10、计数排序
+
+计数排序利用了一个特性, 对于数组的某个元素, 一旦知道了有多少个其它元素比它小\(假设为m个\), 那么就可以确定出该元素的正确位置\(第m+1位\)
+
+1. 获取待排序数组A的最大值, 最小值.
+2. 将最大值与最小值的差值+1作为长度新建计数数组B，并将相同元素的数量作为值存入计数数组.
+3. 对计数数组B累加计数, 存储不同值的初始下标.
+4. 从原数组A挨个取值, 赋值给一个新的数组C相应的下标, 最终返回数组C.
+
+![](/assets/sort10.gif)
+
+### 11、桶排序
+
+桶排序即所谓的箱排序, 它是将数组分配到有限数量的桶子里. 每个桶里再各自排序\(因此有可能使用别的排序算法或以递归方式继续桶排序\). 当每个桶里的元素个数趋于一致时, 桶排序只需花费O\(n\)的时间. 桶排序通过空间换时间的方式提高了效率, 因此它需要额外的存储空间\(即桶的空间\).
+
+### 12、基数排序
+
+
+
+基数排序源于老式穿孔机, 排序器每次只能看到一个列. 它是基于元素值的每个位上的字符来排序的. 对于数字而言就是分别基于个位, 十位, 百位 或千位等等数字来排序. \(不明白不要紧, 我也不懂, 请接着往下读\)![](/assets/sort12.png)
+
+
 
