--- a/JS/作用域与变量提升.md
+++ b/JS/作用域与变量提升.md
@@ -1,3 +1,5 @@
+### ES5中for循环定义的全局变量
+
 下面表达式输出的结果为：
 
 ```js
@@ -8,11 +10,82 @@ for(var i=1;i<4;i++){
 }
 console.log(i)
 
-//4
+//4  这是for循环执行完成之后，i++此时的i已经变成4，所以for循环之后的所有关于i的值都是4
+
 //4
 //4
 //4
 ```
+
+因为在表达式中定义的`var i`是全局作用域变量，任何一个地方都可以访问到，并且一定注意，在for循环内，如果都是同步执行的话，则i的值为3，但是如果是类似异步的，for执行完毕之后为i为4，所以所有i的值都为4.
+
+
+
+### 立即执行函数
+
+先看一段代码：
+
+```js
+function (){ ... }()；
+
+//或者
+
+function fName(){ ... }();
+```
+
+执行结果为: `SyntaxError: Unexpected token (`，为什么会有这个错误呢？
+
+要理解两个概念
+
+**函数声明**
+
+```js
+function name([param[, param[, ... param]]]) {
+   statements
+}
+```
+
+**函数表达式**
+
+```
+//一个匿名函数的函数表达式，被赋值给变量f2:
+```
+
+```js
+var f2 = function() {
+    console.log("f2");
+    }
+
+//通过()来调用此函数
+
+f2();
+```
+
+所以我们来看之前报错的原因，这是一个函数声明，后面再接一个\(\) ，js引擎看到function关键字之后，认为后面跟的是函数定义语句，不应该以圆括号结尾
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
