--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -22,6 +22,8 @@
 * 同协议要求, http与https协议必须保持一致;
 * 同端口要求, 端口号必须相同.
 
+在浏览器中，`<script>、<img>、<iframe>、<link>`等标签都可以加载跨域资源，而不受同源限制，但浏览器限制了JavaScript的权限使其不能读、写加载的内容。
+
 ## 跨域访问
 
 关于解决跨域访问的方法， 一共收集到以下几种，CROS，取消浏览器安全校验，JSONP实际操作过，其他的方法来源于网络，并没有验证。
