--- a/JS/寻找数组中最大值.md
+++ b/JS/寻找数组中最大值.md
@@ -13,4 +13,12 @@ console.log(max);  //89
 ```
 
 ### 2、Math.max
-推荐的方法，
+推荐的方法，但是要注意`Math.max()`对象中传递的单个参数，不能传递整个数组，此时便需要用apply方法将数据对象转化为单个参数对象。
+
+
+```js
+let max = Math.max.apply(array, array);
+console.log(max);  //89
+```
+
+
