--- a/JS/寻找数组中最大值.md
+++ b/JS/寻找数组中最大值.md
@@ -27,6 +27,12 @@ apply可以传递的是一个数组: `apply(this,arguments[])`
 bind只传递一个对象:`bind(this)`
 
 
+### 3、Array.sort()排序之后再取最后一位
+let array = [5, 7, 89, 2, 4]
+let newArr= array.sort();
+console.log(newArr[newArr.length-1]);  //89
+
+
 
 
 
