--- a/JS/寻找数组中最大值.md
+++ b/JS/寻找数组中最大值.md
@@ -1,7 +1,10 @@
 ## 一维数组
-let array=[......]
+
+let array=\[......\]
+
 ### 1、for循环遍历
-for循环是最直接的方法，但也是时间复杂度最高的方法。O(n)
+
+for循环是最直接的方法，但也是时间复杂度最高的方法。O\(n\)
 
 ```js
 let array = [5, 7, 89, 2, 4]
@@ -13,6 +16,7 @@ console.log(max);  //89
 ```
 
 ### 2、Math.max
+
 推荐的方法，但是要注意`Math.max()`对象中传递的单个参数，不能传递整个数组，此时便需要用apply方法将数据对象转化为单个参数对象。这种算法的时间负责度为多少？？
 
 ```js
@@ -21,19 +25,20 @@ let max = Math.max.apply(array, array);
 console.log(max);  //89
 ```
 
-顺便可以区分一下apply、call、bind之间的区别。
-call传递的是单个参数：`call(this,arg1,arg2,arg3...)`
-apply可以传递的是一个数组: `apply(this,arguments[])`
+顺便可以区分一下apply、call、bind之间的区别。  
+call传递的是单个参数：`call(this,arg1,arg2,arg3...)`  
+apply可以传递的是一个数组: `apply(this,arguments[])`  
 bind只传递一个对象:`bind(this)`
 
+### 3、Array.sort\(\)排序之后再取最后一位
 
-### 3、Array.sort()排序之后再取最后一位
+这个办法的时间复杂度就是视具体浏览器JS引擎以及数组长度而定了。
+
+```js
 let array = [5, 7, 89, 2, 4]
 let newArr= array.sort();
 console.log(newArr[newArr.length-1]);  //89
-
-
-
+```
 
 
 
