--- a/JS/函数.md
+++ b/JS/函数.md
@@ -1,4 +1,4 @@
-### f\(a\)\(b\);
+### [http://www.ruanyifeng.com/blog/2009/08/learning\_javascript\_closures.html](http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html)f\(a\)\(b\);
 
 要求返回a+b的结果。
 
@@ -20,7 +20,7 @@ console.log(f(2)(3));  //5
 
 这种方法明显的好，使用闭包，函数里面封装一个函数。最为关键的点在于，**闭包就是能够读取其他函数内部变量的函数**，就相当于把第一次执行时传入的参数x定义为了一个变量，因为在闭包函数中有对x的引用，所以在函数f执行完成之后，内存中x变量的值并没有被清空，在第二次执行的时候可以正常访问到x，并返回x+y。
 
-其实这个问题在阮一峰-关于闭包的学习中有这个表达式，当时自己看的时候只注意到闭包的作用域，没有注意到函数执行表达式。
+其实这个问题在[阮一峰-关于闭包的学习](http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html)中有这个表达式，当时自己看的时候只注意到闭包的作用域，没有注意到函数执行表达式。
 
 ##### 2、我的方法
 
