--- a/JS/数组、字符串中最大、重复元素查找.md
+++ b/JS/数组、字符串中最大、重复元素查找.md
@@ -25,6 +25,12 @@ let max = Math.max.apply(array, array);
 console.log(max);  //89
 ```
 
+但是在ES6中，有一个新的API，**扩展运算符...**，将一个数组转为用逗号分隔的参数序列，所以上式还有一个更简单的替代apply的方法
+
+```js
+let max = Math.max(...array)
+```
+
 顺便可以区分一下apply、call、bind之间的区别。  
 call传递的是单个参数：`call(this,arg1,arg2,arg3...)`  
 apply可以传递的是一个数组: `apply(this,arguments[])`  
