--- a/JS/数组、字符串中最大、重复元素查找.md
+++ b/JS/数组、字符串中最大、重复元素查找.md
@@ -48,7 +48,42 @@ console.log(newArr[newArr.length-1]);  //89
 
 ### 一维数组寻找重复率最高的元素
 
-使用Object.keys\(\)
+##### 使用hash
+
+让object.key=元素，value=出现次数，遍历对象，找到value中最大值，然后将对应的key值返回就好了
+
+```js
+//找出数组中出现最多的元素
+let arr = ['a', 'b', 'c', 'a', 'a', 'b'];
+let res = {};
+
+//遍历数组，生成keys
+for (let i = 0; i < arr.length; i++) {
+    if (!res[arr[i]]) {
+        res[arr[i]] = 1
+    } else {
+        res[arr[i]]++;
+    }
+}
+
+//遍历对象，找出最大的值
+//这里使用Object.keys遍历
+let keys = Object.keys(res);
+let maxNum = 0, max;
+for (let i = 0; i < keys.length; i++) {
+    if (maxNum < res[keys[i]]) {
+        maxNum = res[keys[i]];
+        max = keys[i]
+    }
+}
+console.log(max)
+```
+
+##### 使用空间换时间
+
+### 找到找到字符串中出现频率最高的字符
+
+这个问题和在数组中寻找出现频率最高的元素其实是同一个问题，区别在于，一个是字符，一个是数组。遍历的方式不一样而已。
 
 
 
