--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -10,31 +10,38 @@ for\(let i=0; i&lt;length; i++\){ 代码}
 
 说明：因为String对象具有length属性，所以可以直接使用String.length进行遍历
 
-适用对象：Array，String，obj没有length，不可以使用for循环
+适用对象：**Array，String**，obj没有length，不可以使用for循环
 
 #### 2、for in
 
 语法：
 
 ```js
-for(变量 in对象){ 在此执行代码}
+for( let index in对象){ 在此执行代码}
 ```
 
-说明：
+说明：for in 遍历的是key值
 
-使用对象：Array String  Object
+使用对象：**Array String  Object**
 
 #### 3、for of
 
 语法：
 
 ```js
-for(变量 in对象){ 在此执行代码}
+for(let value of 对象){ 在此执行代码}
 ```
 
-说明：
+说明：for of遍历的value值
 
-使用对象：Array String  Object
+使用对象：**Array String  **
+
+##### for in 与for of 区别
+
+1. 推荐在循环对象属性的时候，使用`for...in`,在遍历数组的时候的时候使用`for...of`。
+2.  `for...in`循环出的是key，`for...of`循环出的是value
+3. 注意，`for...of`是ES6新引入的特性。修复了ES5引入的`for...in`的不足
+4.  `for...of`不能循环普通的对象，需要通过和`Object.keys()`搭配使用
 
 #### 2、for in
 
