--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -43,12 +43,44 @@ for(let value of 对象){ 在此执行代码}
 3. 注意，`for...of`是ES6新引入的特性。修复了ES5引入的`for...in`的不足
 4.  `for...of`不能循环普通的对象，需要通过和`Object.keys()`搭配使用
 
-#### 2、for in
+#### 4、forEach 
 
 语法：
 
 ```js
-for(变量 in对象){ 在此执行代码}
+array.forEach(function(currentValue, index, arr), thisArg)
+```
+
+说明：arr当前元素所属的数组对象。
+
+使用对象：**Array** 只有array对象有
+
+#### 其他数组遍历、map from filter some every等
+再加上forEach，这些都是针对于**Array**进行遍历的，
+
+### String遍历
+一种变换的方法，使用split将字符串切割为字符串数组，再对数组进行遍历。
+
+### Obeject遍历
+
+除了前面写到的for in遍历Object对象，还有以下几种方法对Object进行遍历
+
+#### 2、Object.keys
+
+
+语法：
+
+```js
+Object.keys(obj)   //个表示给定对象的所有可枚举属性的字符串数组。
+```
+说明：Object.keys返回一个由key值组成的**可枚举属性的字符串数组**，再对数组进行遍历既可以遍历Object
+
+#### 3、Object.getOwnPropertyNames
+
+语法：返回一个数组，该数组对元素是 obj自身拥有的枚举或不可枚举属性名称字符串
+
+```js
+Object.getOwnPropertyNames(obj)  //在给定对象上找到的属性对应的字符串数组。
 ```
 
 说明：
@@ -67,27 +99,4 @@ for(变量 in对象){ 在此执行代码}
 
 使用对象：Array String  Object
 
-#### 2、for in
-
-语法：
-
-```js
-for(变量 in对象){ 在此执行代码}
-```
-
-说明：
-
-使用对象：Array String  Object
-
-#### 2、for in
-
-语法：
-
-```js
-for(变量 in对象){ 在此执行代码}
-```
-
-说明：
-
-使用对象：Array String  Object
-
+参考：[JavaScript如何遍历Object](https://huixisheng.github.io/object-loop/)
