--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -33,6 +33,7 @@ for(let value of 对象){ 在此执行代码}
 ```
 
 说明：for of遍历的value值
+只要具有遍历器接口**Iterator**，都可以使用for of 遍历，比如**NodeList Set Map Array String 类数组**
 
 使用对象：**Array String  **
 
@@ -85,9 +86,6 @@ Object.getOwnPropertyNames(obj)  //在给定对象上找到的属性对应的字
 
 说明：返回一个**数组**，该数组对元素是 obj自身拥有的**枚举或不可枚举属性名称字符串**
 
-
-
-使用对象：Array String  Object
 
 #### 2、for in
 
