--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -24,7 +24,7 @@ for( let index in对象){ 在此执行代码}
 
 使用对象：**Array String  Object**
 
-#### 3、for of
+#### 3、[for of](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/for...of)
 
 语法：
 
@@ -87,16 +87,27 @@ Object.getOwnPropertyNames(obj)  //在给定对象上找到的属性对应的字
 说明：返回一个**数组**，该数组对元素是 obj自身拥有的**枚举或不可枚举属性名称字符串**
 
 
-#### 2、for in
+#### 4、[Object.values()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/values)
 
 语法：
 
 ```js
-for(变量 in对象){ 在此执行代码}
-```
+Object.values(obj)  //一个包含对象自身的所有可枚举属性值的数组。
+```  
 
-说明：
+说明：Object.values()返回一个**数组**，其元素是在对象上找到的**可枚举属性值**。属性的顺序与通过手动循环对象的属性值所给出的顺序相同。
 
-使用对象：Array String  Object
+#### 4、Object.entries()
+
+语法：
+
+```js
+Object.entries(obj)  //给定对象自身可枚举属性的键值对数组。
+```  
+
+说明：Object.entries()返回一个数组，其元素是与直接在object上找到的**可枚举属性键值对相对应的数组**。属性的顺序与通过手动循环对象的属性值所给出的顺序相同。
+
+
+
 
 参考：[JavaScript如何遍历Object](https://huixisheng.github.io/object-loop/)
