--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -93,8 +93,7 @@ Object.getOwnPropertyNames(obj)  //在给定对象上找到的属性对应的字
 
 ```js
 Object.values(obj)  //一个包含对象自身的所有可枚举属性值的数组。、
-//示例
-// 随机键值的类数组对象
+//示例  随机键值的类数组对象
 var an_obj = { 100: 'a', 2: 'b', 7: 'c' };
 console.log(Object.values(an_obj)); // ['b', 'c', 'a']
 ```  
