--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -1,4 +1,4 @@
-### 遍历方法
+[](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/entries)### 遍历方法
 
 #### 1、for循环
 
@@ -73,10 +73,13 @@ array.forEach(function(currentValue, index, arr), thisArg)
 
 ```js
 Object.keys(obj)   //个表示给定对象的所有可枚举属性的字符串数组。
+// 类数组对象
+var obj = { 0: "a", 1: "b", 2: "c"};
+console.log(Object.getOwnPropertyNames(obj).sort()); // ["0", "1", "2"]
 ```
 说明：Object.keys返回一个由key值组成的**可枚举属性的字符串数组**，再对数组进行遍历既可以遍历Object
 
-#### 3、Object.getOwnPropertyNames
+#### 3、[Object.getOwnPropertyNames](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/getOwnPropertyNames)
 
 语法：
 
