--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -1,4 +1,5 @@
-[](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/entries)### 遍历方法
+
+### 遍历方法
 
 #### 1、for循环
 
@@ -62,7 +63,7 @@ array.forEach(function(currentValue, index, arr), thisArg)
 ### String遍历
 一种变换的方法，使用split将字符串切割为字符串数组，再对数组进行遍历。
 
-### Obeject遍历
+### Object遍历
 
 除了前面写到的for in遍历Object对象，还有以下几种方法对Object进行遍历
 
