--- a/JS/遍历.md
+++ b/JS/遍历.md
@@ -65,9 +65,9 @@ array.forEach(function(currentValue, index, arr), thisArg)
 
 ### Object遍历
 
-除了前面写到的for in遍历Object对象，还有以下几种方法对Object进行遍历
+除了前面写到的`for in`遍历Object对象，还有以下几种方法对Object进行遍历
 
-#### 2、Object.keys
+#### 2、[Object.keys](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/keys)
 
 
 语法：
