--- a/JS/前端优化.md
+++ b/JS/前端优化.md
@@ -1,1 +1,3 @@
-前端
+前端优化主要方法记住这篇博文-[前端性能优化](http://www.zyy1217.com/2017/03/01/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96/)
+
+以下为后续看到优化方法的补充：
