Creates assets/web.png
Auto commit by GitBook Editor

--- a/JS/前端优化.md
+++ b/JS/前端优化.md
@@ -1,3 +1,10 @@
-前端优化主要方法记住这篇博文-[前端性能优化](http://www.zyy1217.com/2017/03/01/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96/)
+前端优化主要方法记住这篇博文-[前端性能优化](http://www.zyy1217.com/2017/03/01/前端性能优化/)
+
+优化方法脑图：
+
+大图地址：[http://naotu.baidu.com/file/535e0e918b3946c04cf87a1ebf32f29d](http://naotu.baidu.com/file/535e0e918b3946c04cf87a1ebf32f29d)
+
+![](/assets/web.png)
 
 以下为后续看到优化方法的补充：
+
