--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -20,10 +20,59 @@
 整理后：
 
 
-
 ```js
 '111.232.213': [ 'ascqwdwd', 'qwdqwdqw' ],
 '122.31.34.1': [ 'wdojqwodjqwp' ],
 '232.34.13.3': [ 'adhwdhwqhd' ]
 ```
+
+#### 3、求1000以内所有的质数
+
+
+```js
+/** 求num中所有质数
+ * 对比各种求质数的算法，试除法、筛选法两种时间复杂度较低，
+ * 本方法是自己优化的筛选法，因为2,3是比较小的两个质数，大部分数都是他们的倍数，明显不是质数，
+ * 所以使用2,3为基数，先筛选走这些非质数，然后在从5 7等向上筛选，这种方法明显循环次数要少。时间复杂度我也不知道该怎么计算。
+ * **/
+function prime(num) {
+    //定义基数数组baseArr，用来存放较小的质数，res存放筛选结果，base存放[2,3]
+    let baseArr = [], res = [], base = [];
+    num = ~~num;  //取整
+    //对2,3 特殊对待
+    if (num < 4) {
+        if (num === 1)
+            alert('请输入大于1的整数')
+        if (num === 2)
+            base.push(2);
+        else
+            base.push(2, 3)
+    }
+    //筛选剩下的
+    else {
+        baseArr.push(2, 3);
+        base.push(2, 3);
+        for (let i = 2; i <= num; i++) {  //将2,3的倍数剔除，其余的放入res进行下一轮筛选
+            if (i % 2 !== 0 && i % 3 !== 0) {
+                res.push(i);
+            }
+        }
+        for (let j = 0; j <= baseArr.length - 1; j++) {  //以大于3最小的质数开始筛选，
+            for (let i = 1; i < res.length; i++) {
+                if (res[i] % res[j] === 0 && res[i] !== res[j]) {  //除自身外，其他的是质数的倍数的数被剔除
+                    res.splice(i, 1);
+                }
+            }
+            if (res[j] < Math.sqrt(num)) {  //确保基数质数肯定小于sqrt(num)
+                baseArr.push(res[j]);   //添加一个新的基数质数。
+            }
+        }
+    }
+    return base.concat(res)  //将特殊的[2,3]加入返回。
+}
+console.log(prime(100));
+// [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]
+// baseArr = [2,3,,5,7]
+```
+
 
