--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -1,4 +1,9 @@
 ### 前段算法题汇总
+前言：尝试自己根据思路去使用js实现的算法，发现对于算法有这么几个问题：
+* 算法是严谨的，一般都是设计到循环，所以要思考到循环中的特殊情况以及循环条件。
+* 不能钻牛角尖，无从下笔时，在纸上写思路，根据思路一步一步实现，在实现的过程中，如果遇到问题，不要慌忙推翻之前的思路，细想之后再改善，大的思路如果不是有很大的问题，先不要推翻，不然很容易陷入到取舍两难的境地。
+* 注意算法的调试方法，尤其是输出，断点的灵活应用。 
+
 #### 1、数组去重
 
 数组去重的几种方法请参照[数组操作方法](/JS/Array操作方法.md)
