--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -1,4 +1,4 @@
-### 前段算法题汇总
+对于### 前段算法题汇总
 前言：尝试自己根据思路去使用js实现的算法，发现对于算法有这么几个问题：
 * 算法是严谨的，一般都是设计到循环，所以要思考到循环中的特殊情况以及循环条件。
 * 不能钻牛角尖，无从下笔时，在纸上写思路，根据思路一步一步实现，在实现的过程中，如果遇到问题，不要慌忙推翻之前的思路，细想之后再改善，大的思路如果不是有很大的问题，先不要推翻，不然很容易陷入到取舍两难的境地。
@@ -32,7 +32,9 @@
 ```
 
 #### 3、求1000以内所有的质数
-其实
+对于求质数，和判断一个数是不是质数，原理是一样，区别在于求质数是对一群数进行判断，复杂度提高，如果只是判断一个数是不是质数，不要考虑复杂度，直接从2到这个数的平方根开始循环看能不能整除。
+对于求多少以内的质数，也可以这样，但是这样的时间复杂度就提高了，网上有说[几种不同的境界](https://program-think.blogspot.com/2011/12/prime-algorithm-1.html)，这里就不介绍，我才用的筛选法，很明显，对于明显不是质数的数，没有做运算，节省的时间。
+![](/assets/prime.gif)
 
 ```js
 /** 求num中所有质数
