--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -1,5 +1,6 @@
-对于### 前段算法题汇总
+对于\#\#\# 前段算法题汇总  
 前言：尝试自己根据思路去使用js实现的算法，发现对于算法有这么几个问题：
+
 * 算法是严谨的，一般都是设计到循环，所以要思考到循环中的特殊情况以及循环条件。
 * 不能钻牛角尖，无从下笔时，在纸上写思路，根据思路一步一步实现，在实现的过程中，如果遇到问题，不要慌忙推翻之前的思路，细想之后再改善，大的思路如果不是有很大的问题，先不要推翻，不然很容易陷入到取舍两难的境地。
 * 注意算法的调试方法，尤其是输出，断点的灵活应用。 
@@ -8,11 +9,9 @@
 
 数组去重的几种方法请参照[数组操作方法](/JS/Array操作方法.md)
 
-
 #### 2、js脚本整理文件
+
 整理前：
-
-
 
 ```js
 111.232.213 ascqwdwd
@@ -21,9 +20,7 @@
 232.34.13.3 adhwdhwqhd
 ```
 
-
 整理后：
-
 
 ```js
 '111.232.213': [ 'ascqwdwd', 'qwdqwdqw' ],
@@ -32,8 +29,9 @@
 ```
 
 #### 3、求1000以内所有的质数
-对于求质数，和判断一个数是不是质数，原理是一样，区别在于求质数是对一群数进行判断，复杂度提高，如果只是判断一个数是不是质数，不要考虑复杂度，直接从2到这个数的平方根开始循环看能不能整除。
-对于求多少以内的质数，也可以这样，但是这样的时间复杂度就提高了，网上有说[几种不同的境界](https://program-think.blogspot.com/2011/12/prime-algorithm-1.html)，这里就不介绍，我才用的筛选法，很明显，对于明显不是质数的数，没有做运算，节省的时间。
+
+对于求质数，和判断一个数是不是质数，原理是一样，区别在于求质数是对一群数进行判断，复杂度提高，如果只是判断一个数是不是质数，不要考虑复杂度，直接从2到这个数的平方根开始循环看能不能整除。  
+对于求多少以内的质数，也可以这样，但是这样的时间复杂度就提高了，网上有说[几种不同的境界](https://program-think.blogspot.com/2011/12/prime-algorithm-1.html)，这里就不介绍，我才用的筛选法，很明显，对于明显不是质数的数，没有做运算，节省的时间。  
 ![](/assets/prime.gif)
 
 ```js
@@ -79,7 +77,8 @@ function prime(num) {
 }
 console.log(prime(100));
 // [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]
-// baseArr = [2,3,,5,7]
+// baseArr = [2,3,5,7]
 ```
+
 
 
