--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -64,7 +64,7 @@ function prime(num) {
         }
         for (let j = 0; j <= baseArr.length - 1; j++) {  //以大于3最小的质数开始筛选，
             for (let i = 1; i < res.length; i++) {
-                if (res[i] % res[j] === 0 && res[i] !== res[j]) {  //除自身外，其他的是质数的倍数的数被剔除
+                if (res[i] % res[j] === 0 && i !== j) {  //除自身外，其他的是质数的倍数的数被剔除
                     res.splice(i, 1);
                 }
             }
