--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -175,13 +175,20 @@ console.log( "A" - "B" + "2");
 console.log( "A" - "B" + 2);
 ```
 
-```
+```js
 '122'
 '32'
 '02'
 '112'
 'NaN2'
 NaN
+```
+
+**多个数字和数字字符串混合运算时，跟操作数的位置有关**
+
+```js
+console.log(2 + 1 + '3'); / /‘33’
+console.log('3' + 2 + 1); //‘321’
 ```
 
 
