--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -129,7 +129,7 @@ Number('a123')  //NaN
 * PreferredType是String，则先调用toString\(\)，结果不是原始值的话再调用valueOf\(\)，还不是原始值的话则抛出错误；
 * PreferredType是Number，则先调用valueOf\(\)再调用toString\(\)。
 
-### `+`操作符
+### `+ -`操作符
 
 在加法的过程中，首先把等号左右两边进行了求原值ToPrimitive\(\)操作，然后如果两个原值只要有一个是String类型，就把两个原值都进行转化字符串ToString\(\)操作，进行字符串拼接；否则把两个原值都进行转化数字ToNumber\(\)操作，进行数字相加。
 
@@ -207,6 +207,18 @@ console.log(typeof (''+3)); //string
 ```js
 consol.log('a' * 'sd'); //NaN
 console.log('A' - 'B'); // NaN
+```
+
+### 给基本类型数据添加属性，不报错，但取值时是undefined
+
+```js
+var a = 10;
+a.pro = 10;
+console.log(a.pro + a);  //undefined
+var s = 'hello';
+s.pro = 'world';
+console.log(s.pro + s);  //'undefinedhello'
+
 ```
 
 
