--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -80,5 +80,16 @@ console.log(prime(100));
 // baseArr = [2,3,5,7]
 ```
 
+#### 4、不借助临时变量，进行两个整数的交换
+
+```
+function exchange(a,b){
+    b=a-b;
+    a=a-b;
+    b=a+b;
+    renturn [a,b]
+}
+```
+
 
 
