--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -218,8 +218,7 @@ console.log(a.pro + a);  //undefined
 var s = 'hello';
 s.pro = 'world';
 console.log(s.pro + s);  //'undefinedhello'
-
 ```
 
-
+a.pro和s.pro都为undefined。给基本类型数据加属性不报错，但是引用的话返回undefined，10+undefined返回NaN，而undefined和string相加时转变成了字符串。
 
