--- a/JS/前端算法题汇总.md
+++ b/JS/前端算法题汇总.md
@@ -82,14 +82,23 @@ console.log(prime(100));
 
 #### 4、不借助临时变量，进行两个整数的交换
 
-```
+```js
 function exchange(a,b){
     b=a-b;
     a=a-b;
     b=a+b;
-    renturn [a,b]
+    return [a,b]
 }
 ```
 
+#### 5、找出数组最大的差值
 
+```js
+function maxDiff(array) {
+    return Math.max.apply(array,array) - Math.min.apply(array,array);
+}
+console.log(maxDiff(arr));
+```
+
+6、
 
