--- a/JS/正则表达式.md
+++ b/JS/正则表达式.md
@@ -2,6 +2,10 @@
 
 充分利用网上的资源才是正确学习正则的途径。
 
+我对于正则的害怕主要是因为记不住正则表达式中特殊字符，MDN有一张表格，很完整很权威，对照这张表格就可以的。要求看到特殊字符就知道是什么意思。
+
+[**MDN-正则表达式**](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions)
+
 注意正则有一些字符类匹配，很多时候大家都是使用字符类匹配。这个要记住。
 
 ![](/assets/import4.png)重复匹配符也要注意，这个也要记住，一看就能知道表达的匹配范围。
