--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -91,6 +91,8 @@ null===Object  //false
 
 #### ![](/assets/==.png)
 
+关于
+
 #### Object.is\(A,B\)
 
 区分和严格相等`===`之间的区别
@@ -125,6 +127,8 @@ Number('a123')  //NaN
 | Object | ToNumber\(ToPrimitive\( input , Number\)\) |
 
 ### ToPrimitive\(\)
+
+关于隐式转换参考这篇文章：[js隐式装箱-ToPrimitive](https://sinaad.github.io/xfe/2016/04/15/ToPrimitive/)
 
 默认用法：ToPrimitive\(input \[, PreferredType\]\)，（ToPrimitive方法可被修改）
 
