--- a/JS/日期格式化.md
+++ b/JS/日期格式化.md
@@ -50,5 +50,5 @@
 })();
 ```
 
-关于这个时间格式化代码，这段厉害就厉害在于，正则表达式应用的非常炉火纯青。
+关于这个时间格式化代码，这段厉害就厉害在于，正则表达式应用的非常炉火纯青。尤其replace那一段，使用捕获括号匹配字符串并记住字符串，用`$1`表示记住的第一个匹配对象，后面替换也很巧妙，设定好位数，然后字符串拼接，最重要的一步，再使用substr截取字符串，一般情况下我想的就是拼凑，先删都拼，比较好的做法是先拼后删。
 
