--- a/problem/第一次阿里面试.md
+++ b/problem/第一次阿里面试.md
@@ -1,7 +1,5 @@
 #### 记我的第一次阿里面试
 
-
-
 2018.03.21  10:00 周三
 
 阿里嘛， 神奇的存在，技术的代名词，所有人都想进去，谁都不例外。其实这次阿里的面试挺运气的，面临三月份阿里春招，我想去蚂蚁金服，准备内推，但是某牛逼offer收割机室友投递了阿里，然后第一轮电话面试，整整一个小时，问的及其刁钻，我吓到了，暂时不敢投阿里，准备三月底投递。然后在第三方平台上看到阿里体育招前端实习岗，然后第二天HR就打电话来通知面试，这个算是社招了。
@@ -30,15 +28,7 @@ promise的原理，我回答的promise对象具体内部怎么实现的我不清
 
 自己实现一个promise函数，我有点蒙，这不已经是一个源生的对象了吗，硬着头皮说，promise关键在于检测处理是否完成，类似于ajax的onreadystate的处理，如果要实现，那就需要做一个检测，怎么做这个检测不清楚，然后，面试官说promise不是这样的。设计出来不是主要用来处理异步的，然后我就更懵逼了，没get到他的点，我想他可能问的是回调的方法模拟一个promise。
 
-
-
-
-
 实现一个map函数，es6中的，但是Android并不支持，怎么实现让你的代码在不同浏览器下都使用调用map函数。我回答建立一个库函数，然后向Array对象原型里面定义一个map函数，用js实现map功能。然后在调用的时候判断浏览器是否支持，支持的话调用源生的，不支持的话调用自定义的。
-
-
-
-
 
 你了解jsonp吗？知道一点，用来跨域；那怎么实现跨域，原理？src实现，但是只能是GET请求
 
@@ -70,7 +60,7 @@ promise的原理，我回答的promise对象具体内部怎么实现的我不清
 
 什么时候出结果，等HR通知，然后更凉了，结合我和我室友那次网易面试，这样的情况基本上不是很对口。心凉了
 
-只能想到这些内容了，面试官比较友好，因为是直接去门口认领我，他什么也没拿，直接找了个地方面试，问问题也比较随意，没有往深层次提问，都是一些比较基础的东西，不会了就换了其他的问题，
+只能想到这些内容了，面试官比较友好，因为是直接去门口认领我，他什么也没拿，直接找了个地方面试，问问题也比较随意，没有往深层次提问，都是一些比较基础的东西，不会了就换了其他的问题，总的来讲没有什么刁难的问题，可能也觉得我没什么实力，问不出来什么东西。本来自我感觉还好，后面问道结果的时候HR通知，我就有点凉了。
 
-
+等通知吧，我的第一次阿里之旅。
 
