--- a/problem/第一次阿里面试.md
+++ b/problem/第一次阿里面试.md
@@ -60,7 +60,11 @@ promise的原理，我回答的promise对象具体内部怎么实现的我不清
 
 什么时候出结果，等HR通知，然后更凉了，结合我和我室友那次网易面试，这样的情况基本上不是很对口。心凉了
 
-只能想到这些内容了，面试官比较友好，因为是直接去门口认领我，他什么也没拿，直接找了个地方面试，问问题也比较随意，没有往深层次提问，都是一些比较基础的东西，不会了就换了其他的问题，总的来讲没有什么刁难的问题，可能也觉得我没什么实力，问不出来什么东西。本来自我感觉还好，后面问道结果的时候HR通知，我就有点凉了。
+
+
+只能想到这些内容了，全程1个小时左右，面试官比较友好，因为是直接去门口认领我，他什么也没拿，直接找了个地方面试，问问题也比较随意，没有往深层次提问，都是一些比较基础的东西，不会了就换了其他的问题，总的来讲没有什么刁难的问题，可能也觉得我没什么实力，问不出来什么东西。本来自我感觉还好，后面问道结果的时候HR通知，我就有点凉了。毕竟社招，不清楚岗位需求。
 
 等通知吧，我的第一次阿里之旅。
+
+后面出来就逛了一下阿里西溪园区，毕竟第一次，刘姥姥进大观园。然后今天贼冷，拍了几张照片就溜了，搞不好就只有这一次进来的机会了，哈哈哈！！！！！！！！！
 
