--- a/problem/第一次阿里面试.md
+++ b/problem/第一次阿里面试.md
@@ -8,55 +8,62 @@
 
 先是自我介绍，简单介绍一下自己以及前端项目的事情。
 
-然后问了网页结构表现行为三层怎么理解，，就是DOM+CSS+JS，有什么好处，比较开放。
+* 然后问了网页结构表现行为三层怎么理解，，就是DOM+CSS+JS，有什么好处，比较开放。
 
-DOM中id class你习惯怎么命名？根据结构来。、
+* DOM中id class你习惯怎么命名？根据结构来。
 
-doctype的区别？说实话我不懂，xml这些没写过，有什么区别，不懂，就是不定义的话浏览器会会触发怪异模式，怪异模式是什么样的，没接触过
+* doctype了解吗，为什么要加？说实话我不懂，xml这些没写过，有什么区别，不懂，就是不定义的话浏览器会会触发怪异模式，怪异模式是什么样的，没接触过
 
 ![](/assets/doctype.png)
 
 再问了你会什么东西，掌握的怎么样，我就说了主要是前端基础，框架类的东西接触不多，做过angular的项目，看过Vue和React等，但是都不是很深，然后想对JS深入学习一下，面试官就开始问一些JS的问题
 
-函数啊，事件处理，原话是实现一个事件代理，想要的是使用事件冒泡。
+* 源生JS了解多少？不多
 
-前端优化有哪些方法，你在写的过程中怎么优化，我大概谈了一下之前看过的优化方法，说按照这个方法去优化，但是我并不能直观的感受这个优化后和不优化之间的差别，然后面试管说优化还是很重要
+* 实现一个map函数，es6中的，但是Android并不支持，怎么实现让你的代码在不同浏览器下都使用调用map函数。我回答建立一个库函数，然后向Array对象原型里面定义一个map函数，用js实现map功能。然后在调用的时候判断浏览器是否支持，支持的话调用源生的，不支持的话调用自定义的。
 
-ES6有哪些新的东西，你用到的。&gt;&gt;箭头函数、let/const、字符串模板、promise等
+* 事件处理，原话是实现一个事件代理，想要的是使用事件冒泡。
 
-promise的原理，我回答的promise对象具体内部怎么实现的我不清楚，然后使用方法我知道怎么用，从pending到resolve、reject状态的过程，用来处理异步函数的，
+* 前端优化有哪些方法，你在写的过程中怎么优化，我大概谈了一下之前看过的优化方法，说按照这个方法去优化，但是我并不能直观的感受这个优化后和不优化之间的差别，然后面试管说优化还是很重要
 
-自己实现一个promise函数，我有点蒙，这不已经是一个源生的对象了吗，硬着头皮说，promise关键在于检测处理是否完成，类似于ajax的onreadystate的处理，如果要实现，那就需要做一个检测，怎么做这个检测不清楚，然后，面试官说promise不是这样的。设计出来不是主要用来处理异步的，然后我就更懵逼了，没get到他的点，我想他可能问的是回调的方法模拟一个promise。
+* ES6有哪些新的东西，你用到的。&gt;&gt;箭头函数、let/const、字符串模板、promise等
 
-实现一个map函数，es6中的，但是Android并不支持，怎么实现让你的代码在不同浏览器下都使用调用map函数。我回答建立一个库函数，然后向Array对象原型里面定义一个map函数，用js实现map功能。然后在调用的时候判断浏览器是否支持，支持的话调用源生的，不支持的话调用自定义的。
+* promise的原理，我回答的promise对象具体内部怎么实现的我不清楚，然后使用方法我知道怎么用，从pending到resolve、reject状态的过程，用来处理异步函数的，
 
-你了解jsonp吗？知道一点，用来跨域；那怎么实现跨域，原理？src实现，但是只能是GET请求
+* 自己实现一个promise函数，我有点蒙，这不已经是一个源生的对象了吗，硬着头皮说，promise关键在于检测处理是否完成，类似于ajax的onreadystate的处理，如果要实现，那就需要做一个检测，怎么做这个检测不清楚，然后，面试官说promise不是这样的。设计出来不是主要用来处理异步的，然后我就更懵逼了，没get到他的点，我想他可能问的是回调的方法模拟一个promise。
 
-说说你对css盒模型的理解？
 
-然后了解设计模式吗？知道一点，不深入；说说看？已经忘的差不多了，憋了半天没想出来一个，说了一个工作模式，然后纠正说是工厂模式，其他的实在想不起来，亏我还买了一本设计模式的书，真的是白买了，当时悔死了，构造器模式，模块模式，单例模式，观察者模式，中介者模式，原型模式，命令模式，外观模式，工厂模式，Mixin模式，装饰者模式，享元模式，哎，不说了，回去好好看书吧。
 
-你写代码用到了设计模式没有？可能用到过，但是不懂设计模式，所以不知道。
+* 你了解jsonp吗？知道一点，用来跨域；那怎么实现跨域，原理？src实现，但是只能是GET请求
 
-给个例子：这边有一个弹出框，分为title、content、footer组成，然后footer上有两个按钮，怎么设计每个地方都能用？这时候已经在白板上写了，我只能说将公共部分抽离封装，差异部分单独处理，他要我说具体点，写出来，我有点写不来，知道那个思想，但是书写不来，然后让我写伪代码，我用了文字表述，面试官提示了一下，一个js文件下面是你封装的API，然后我就写了一下，哪些公共部分抽离，DOM，点击事件等，然后在使用的页面再去调用，觉得这部分自己答得很不好，
+* 说说你对css盒模型的理解？
 
-再问了怎么看CSS3，我说很强大，新的属性，选择符等等，用过less sass编译吗？好处？嵌套选择符，避免了在DOM中书写class名。但是我提出来一个疑问，这个嵌套选择和CSS优化之间的平衡关系。
+* 然后了解设计模式吗？知道一点，不深入；说说看？已经忘的差不多了，憋了半天没想出来一个，说了一个工作模式，然后纠正说是工厂模式，其他的实在想不起来，亏我还买了一本设计模式的书，真的是白买了，当时悔死了，构造器模式，模块模式，单例模式，观察者模式，中介者模式，原型模式，命令模式，外观模式，工厂模式，Mixin模式，装饰者模式，享元模式，哎，不说了，回去好好看书吧。
 
-实现一个flex布局，三栏式布局。然后巴拉巴拉，然后就说三个div，同一行布局，有什么方法实现？1、绝对定位，2、inline-block， 3、flex，4、float，5、table，6、圣杯，7、双飞翼，8、inline-block
+* 你写代码用到了设计模式没有？可能用到过，但是不懂设计模式，所以不知道。
 
-怎么清除浮动，clear both，还有其他的没说然后转到另外一个上面去了。
+* 给个例子：这边有一个弹出框，分为title、content、footer组成，然后footer上有两个按钮，怎么设计每个地方都能用？这时候已经在白板上写了，我只能说将公共部分抽离封装，差异部分单独处理，他要我说具体点，写出来，我有点写不来，知道那个思想，但是书写不来，然后让我写伪代码，我用了文字表述，面试官提示了一下，一个js文件下面是你封装的API，然后我就写了一下，哪些公共部分抽离，DOM，点击事件等，然后在使用的页面再去调用，觉得这部分自己答得很不好，
 
-箭头函数你用的情况有什么好处？简洁只管，this指向明确
+* 再问了怎么看CSS3，我说很强大，新的属性，选择符等等，用过less sass编译吗？好处？嵌套选择符，避免了在DOM中书写class名。但是我提出来一个疑问，这个嵌套选择和CSS优化之间的平衡关系。
 
-那么你怎么看this，看具体的，闭包的this，谁调用等等，
+* 实现一个flex布局，三栏式布局。然后巴拉巴拉，然后就说三个div，同一行布局，有什么方法实现？1、绝对定位，2、inline-block， 3、flex，4、float，5、table，6、圣杯，7、双飞翼，8、inline-block
 
-又说到这个经典问题，for（var i; ......）{console.log\(i\)}?两点：变量引用，块级作用域。
+* 怎么清除浮动，clear both，还有其他的没说然后转到另外一个上面去了。
 
-有没有移动端开发经验？一点点，不多，
+* 箭头函数你用的情况有什么好处？简洁只管，this指向明确
 
-自己的前端规划？
+* 那么你怎么看this，看具体的，闭包的this，谁调用等等，
 
-接下里就是我有什么问题了，想了解一下阿里体育，以及前端是做什么的，主要做移动端的，当时我心里就有点凉了，没有这一块的经验。
+* 又说到这个经典问题，for（var i; ......）{console.log\(i\)}?两点：变量引用，块级作用域。
+
+* 有没有移动端开发经验？一点点，不多，
+
+* 自己的前端规划？
+* 觉得自己CSS和JS哪个好？额。。这个并不好回答，我说JS吧，因为CSS太灵活了，我将JS分为三个阶段，然后我处在第二阶段。
+
+**接下里就是我有什么问题了，**
+
+想了解一下阿里体育，以及前端是做什么的，主要做移动端的，当时我心里就有点凉了，没有这一块的经验，因为之前问到我移动端开发怎么弄。
 
 什么时候出结果，等HR通知，然后更凉了，结合我和我室友那次网易面试，这样的情况基本上不是很对口。心凉了
 
@@ -70,15 +77,9 @@ promise的原理，我回答的promise对象具体内部怎么实现的我不清
 
 ![](/assets/微信图片_20180321154148.jpg)
 
-
 ![](/assets/微信图片_20180321154138.jpg)
 
 ![](/assets/微信图片_20180321154134.jpg)
 
-
-
-
 ![](/assets/微信图片_20180321154143.jpg)
-
-
 
