--- a/problem/第一次阿里面试.md
+++ b/problem/第一次阿里面试.md
@@ -32,8 +32,6 @@
 
 * 自己实现一个promise函数，我有点蒙，这不已经是一个源生的对象了吗，硬着头皮说，promise关键在于检测处理是否完成，类似于ajax的onreadystate的处理，如果要实现，那就需要做一个检测，怎么做这个检测不清楚，然后，面试官说promise不是这样的。设计出来不是主要用来处理异步的，然后我就更懵逼了，没get到他的点，我想他可能问的是回调的方法模拟一个promise。
 
-
-
 * 你了解jsonp吗？知道一点，用来跨域；那怎么实现跨域，原理？src实现，但是只能是GET请求
 
 * 说说你对css盒模型的理解？
@@ -59,6 +57,9 @@
 * 有没有移动端开发经验？一点点，不多，
 
 * 自己的前端规划？
+
+* 为什么选择前端？
+
 * 觉得自己CSS和JS哪个好？额。。这个并不好回答，我说JS吧，因为CSS太灵活了，我将JS分为三个阶段，然后我处在第二阶段。
 
 **接下里就是我有什么问题了，**
