--- a/problem/第一次阿里面试.md
+++ b/problem/第一次阿里面试.md
@@ -22,6 +22,8 @@
 
 * 实现一个map函数，es6中的，但是Android并不支持，怎么实现让你的代码在不同浏览器下都使用调用map函数。我回答建立一个库函数，然后向Array对象原型里面定义一个map函数，用js实现map功能。然后在调用的时候判断浏览器是否支持，支持的话调用源生的，不支持的话调用自定义的。
 
+* 关于继承？class和extend？
+
 * 事件处理，原话是实现一个事件代理，想要的是使用事件冒泡。
 
 * 前端优化有哪些方法，你在写的过程中怎么优化，我大概谈了一下之前看过的优化方法，说按照这个方法去优化，但是我并不能直观的感受这个优化后和不优化之间的差别，然后面试管说优化还是很重要
