--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -20,6 +20,10 @@ btn.onclick=function (){}
 ```
 
 DOM2级事件处理程序，这里因为历史原因，IE的事件处理操作API名称和常规的不太一样，所以，一般需要考虑到浏览器兼容，高程上给出了一个扩浏览器的EventUtil对象，会检测是是否支持DOM2级事件处理，以及IE下的情况。优先推荐。
+**注意** ：addEventListener()/removeEventListener()最后一个参数为boolean值，true表示在捕获阶段调用事件处理函数，false表示在冒泡阶段处理。
+IE下的attachEvent()  detachEvent()没有这个布尔值，因为早期IE只支持冒泡，所以IE处理默认冒泡。
+
+
 
 ```js
 /** DOM2级事件处理程序  浏览器兼容
