--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -54,5 +54,10 @@ let EventUtil = {
     }
 }
 ```
+### 事件对象
 
+在触发 DOM 上的某个事件时，会产生一个事件对象 event ，这个对象中包含着所有与事件有关的信息。包括导致事件的元素、事件的类型以及其他与特定事件相关的信息。例如，鼠标操作导致的事件对象中，会包含鼠标位置的信息，而键盘操作导致的事件对象中，会包含与按下的键有关的信息。所有浏览器都支持 event 对象，但支持方式不同。 
+
+当然，在事件对象中IE也有不一样的地方。后面再区别，先看DOM2级事件对象。
+![](/assets/eventObj.png)
 
