--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -10,21 +10,18 @@
 
 使用事件代理意味着你可以节省大量重复的事件监听，以减少浏览器资源消耗。还有一个好处就是让HTML独立起来，比如之后还有要加子元素的需求，也不需要再为其单独加事件监听了。
 
-
 ### 事件处理程序
-DOM0级事件处理就是讲一个函数赋值给一个事件处理程序属性
 
+DOM0级事件处理就是讲一个函数赋值给一个事件处理程序属性
 
 ```js
 btn.onclick=function (){}
 ```
 
-DOM2级事件处理程序，这里因为历史原因，IE的事件处理操作API名称和常规的不太一样，所以，一般需要考虑到浏览器兼容，高程上给出了一个扩浏览器的EventUtil对象，会检测是是否支持DOM2级事件处理，以及IE下的情况。优先推荐。
-**注意** ：addEventListener()/removeEventListener()最后一个参数为boolean值，true表示在捕获阶段调用事件处理函数，false表示在冒泡阶段处理。
+DOM2级事件处理程序，这里因为历史原因，IE的事件处理操作API名称和常规的不太一样，所以，一般需要考虑到浏览器兼容，高程上给出了一个扩浏览器的EventUtil对象，会检测是是否支持DOM2级事件处理，以及IE下的情况。优先推荐。  
+**注意** ：addEventListener\(\)/removeEventListener\(\)最后一个参数为boolean值，true表示在捕获阶段调用事件处理函数，false表示在冒泡阶段处理。
 
-IE下的attachEvent()  detachEvent()没有这个布尔值，因为早期IE只支持冒泡，所以IE处理默认冒泡。
-
-
+IE下的attachEvent\(\)  detachEvent\(\)没有这个布尔值，因为早期IE只支持冒泡，所以IE处理默认冒泡。
 
 ```js
 /** DOM2级事件处理程序  浏览器兼容
@@ -54,10 +51,13 @@ let EventUtil = {
     }
 }
 ```
+
 ### 事件对象
 
-在触发 DOM 上的某个事件时，会产生一个事件对象 event ，这个对象中包含着所有与事件有关的信息。包括导致事件的元素、事件的类型以及其他与特定事件相关的信息。例如，鼠标操作导致的事件对象中，会包含鼠标位置的信息，而键盘操作导致的事件对象中，会包含与按下的键有关的信息。所有浏览器都支持 event 对象，但支持方式不同。 
+在触发 DOM 上的某个事件时，会产生一个事件对象 event ，这个对象中包含着所有与事件有关的信息。包括导致事件的元素、事件的类型以及其他与特定事件相关的信息。例如，鼠标操作导致的事件对象中，会包含鼠标位置的信息，而键盘操作导致的事件对象中，会包含与按下的键有关的信息。所有浏览器都支持 event 对象，但支持方式不同。
 
-当然，在事件对象中IE也有不一样的地方。后面再区别，先看DOM2级事件对象。
+当然，在事件对象中IE也有不一样的地方。后面再区别，先看DOM2级事件对象。  
 ![](/assets/eventObj.png)
+
+在事件处理程序内部，对象 this 始终等于 currentTarget 的值，而 target 则只包含事件的实际目标。如果直接将事件处理程序指定给了目标元素，则 this 、 currentTarget 和 target 包含相同的值。。如果事件处理程序存在于按钮的父节点中（例如 document.body ），那么这些值是不相同的。
 
