--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -61,3 +61,9 @@ let EventUtil = {
 
 在事件处理程序内部，对象 this 始终等于 currentTarget 的值，而 target 则只包含事件的实际目标。如果直接将事件处理程序指定给了目标元素，则 this 、 currentTarget 和 target 包含相同的值。。如果事件处理程序存在于按钮的父节点中（例如 document.body ），那么这些值是不相同的。
 
+##### IE中的事件对象
+
+![](/assets/enevt-ie.png)
+
+
+
