--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -67,7 +67,37 @@ let EventUtil = {
 
 ### 事件类型![](/assets/eventType1.png)
 
-这里面主要记住UI事件，大部分是window对象下的。
+这里面主要记住UI事件，大部分是window对象相关。
 
-![](/assets/eventType2.png)
+### ![](/assets/eventType2.png)
+
+### 内存和性能优化
+
+在 JavaScript 中，添加到页面上的事件处理程序数量将直接关系到页面的整体运行性能。导致这一问题的原因是多方面的。首先，每个函数都是对象，都会占用内存；内存中的对象越多，性能就越差。其次，必须事先指定所有事件处理程序而导致的 DOM访问次数，会延迟整个页面的交互就绪时间。
+
+#### 优化方案一：使用事件委托
+
+事件委托利用了事件冒泡，只指定一个事件处理程序，就可以管理某一类型的所有事件。
+
+一个典型的应用就是比如有一批列表，给每一个列表都添加一个事件处理程序，则内存占用比较大，然后操作也比较复杂，如果在DOM中尽量高一层级上添加一个事件处理程序，利用事件冒泡，可以让每一个列表都可以获取到事件处理。这种技术对用户最终的结果与之前的方法差不多，但是需要的内存更少。
+
+使用事件委托技术，与传统方法相比较，有如下优势：
+
+#### ![](/assets/eventProxy.png)
+
+#### 优化方案二：移除时间事件处理程序
+
+内存中保留着那些过时不用的“空事件处理程序”，也是造成Web应用程序内存和性能问题的主要原因。两种典型的情况会造成“空事件处理程序占用内存”的问题：
+
+* 从文档中移除带有事件处理程序的元素时。  这可能是通过纯粹的 DOM 操作，例如使用 removeChild\(\) 和 replaceChild\(\) 方法，但更多地是发  生在使用 innerHTML 替换页面中某一部分的时候。如果带有事件处理程序的元素被 innerHTML 删除  了，那么原来添加到元素中的事件处理程序极有可能无法被当作垃圾回收。
+
+一般使用手工移除事件处理程序，`btn.onclick=null; `，然后再设置innerHTML。
+
+* 卸载页面。如果在页面被卸载之前没  有清理干净事件处理程序，那它们就会滞留在内存中。每次加载完页面再卸载页面时（可能是在两个页  面间来回切换，也可以是单击了“刷新”按钮），内存中滞留的对象数目就会增加，因为事件处理程序  占用的内存并没有被释放。 
+
+一般来说，最好的做法是在页面卸载之前，先通过onunload事件处理程序移除所有事件处理程序。
+
+
+
+说到 这里，就又可以看到事件委托技术的优势，如果事件追踪的越少，越容易移除。
 
