--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -229,3 +229,9 @@ console.log(s.pro + s);  //'undefinedhello'
 
 a.pro和s.pro都为undefined。给基本类型数据加属性不报错，但是引用的话返回undefined，10+undefined返回NaN，而undefined和string相加时转变成了字符串。
 
+
+
+### A && B 与 A \|\| B
+
+**A && B** 与运算，会做boolean转换，当A为false时返回A的结果，当A为true时返回B的结果，
+**A||B** 或运算，当A为true时返回A的结果，当A为false时返回B的结果。
