--- a/JS/事件机制.md
+++ b/JS/事件机制.md
@@ -103,3 +103,21 @@ let EventUtil = {
 
 说到 这里，就又可以看到事件委托技术的优势，如果事件追踪的越少，越容易移除。
 
+
+
+### mouse事件
+
+**mouseover与mouseenter**
+
+不论鼠标指针穿过被选元素或其子元素，都会触发 mouseover 事件。
+
+只有在鼠标指针穿过被选元素时，才会触发 mouseenter 事件。
+
+**mouseout与mouseleave**
+
+不论鼠标指针离开被选元素还是任何子元素，都会触发 mouseout 事件。
+
+只有在鼠标指针离开被选元素时，才会触发 mouseleave 事件。
+
+
+
