--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -3,6 +3,10 @@
 以前对于排序，只知道冒泡排序，了解一点快速排序，一直是我的弱点，今天是时候好好攻克一下了  
 参考：[JS中可能用得到的全部的排序算法](http://louiszhai.github.io/2016/12/23/sort/#冒泡排序)
 
+#### 时间复杂度
+
+![](/assets/time.png)
+
 ### 1、冒泡排序
 
 冒泡排序需要两个嵌套的循环. 其中, 外层循环移动游标; 内层循环遍历游标及之后\(或之前\)的元素, 通过两两交换的方式, 每次只确保该内循环结束位置排序正确, 然后内层循环周期结束, 交由外层循环往后\(或前\)移动游标, 随即开始下一轮内层循环, 以此类推, 直至循环结束.  
@@ -305,9 +309,5 @@ function sort(array) {
 
 ### 12、基数排序
 
-
-
 基数排序源于老式穿孔机, 排序器每次只能看到一个列. 它是基于元素值的每个位上的字符来排序的. 对于数字而言就是分别基于个位, 十位, 百位 或千位等等数字来排序. \(不明白不要紧, 我也不懂, 请接着往下读\)![](/assets/sort12.png)
-
-
 
