--- a/JS/闭包.md
+++ b/JS/闭包.md
@@ -39,16 +39,17 @@
 来看一个典型的例子
 
 ```js
+var result = new Array();    
 function createFunctions(){    
-  var result = new Array();     
-  for (var i=0; i < 10; i++){       
-    result[i] = function(){            
-       return i;       
-     };     
+  for (var i=0; i < 10; i++){      
+      result[i] = function(){            
+          console.log(i);      
+      };     
    }     
-   return result; 
 }
-//result=[f(),f(),f(),f(),f(),f(),f(),f(),f(),f(),f(),f(),f()]
+
+result[6]();  //10
+
 ```
 
 从表面上看，似乎每一个函数都返回10 ，但实际上，每个函数都返回10， 因为每个函数的作用域链中都保存着父级函数的活动对象，他们的引用的都是同一个变量i，当父级函数`return result` 后，变量i的值变成10 ，每个函数引用保存变量i的同一个变量对象，因为此时i=10，所以引用变量指向的值都变成10。
@@ -56,16 +57,21 @@ function createFunctions(){
 解决这个问题最方便的一个方法是将闭包函数立即执行，每次引用都变成实际i对应的值。每次循环立即执行后销毁引用变量。
 
 ```js
-function createFunctions(){  var result = new Array();     
+var result = new Array();    
+function createFunctions(){   
   for (var i=0; i < 10; i++){       
-    result[i] = function(){            
-       return i;       
+    result[i] = function(){       
+        var c = i;      
+        return function () {
+            console.log(c);
+        };       
      }();     
-   }     
-   return result; 
+   }   
 }
 
-//result=[0,1,2,3,4,5,6,7,8,9]
+result[6]();  //6
+
+
 ```
 
 ### 闭包的注意点
