--- a/problem/阿里校招一面.md
+++ b/problem/阿里校招一面.md
@@ -91,4 +91,7 @@ const name = a.name;
 
 **webpack了解吗？  webpack中plugins和loader之间的区别**
 
+**自己再聊聊其他的觉得自己学的不错的，比如CSS啊**
 
+总体来讲，蚂蚁金服的面试偏HTTP网络安全这一块，可能跟蚂蚁金服的业务有关，阿里下面不同部门的侧重点不一样。
+自己太紧张，好多都不会，尤其是计算机网络这一块的东西。
